<resources>
    <string name="app_name">NewsApp</string>
    <string name="title_sources">News Sources</string>
    <string name="title_sources_desc">Select Top News from specific news source.\nNOTE: You can\'t browse news sources by category or country, even if selected.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sources_changed">Source(s) changed.</string>
    <string name="menu_title">Menu</string>
    <string name="default_source">All</string>
    <string name="title_categories">News Categories</string>
    <string name="title_categories_desc">Select Top News by specific category.</string>
    <string name="title_countries">Countries</string>
    <string name="title_countries_desc">Select Top News from specific country.</string>
    <string name="source_default">All</string>
    <string name="category_default">All</string>
    <string name="country_default">us</string>
    <string name="country_changed">Country changed.</string>
    <string name="category_changed">Category changed.</string>
    <string name="menu_source_title">News Sources</string>
    <string name="menu_category_country_title">News Categories and Country</string>
    <string name="all">Select All News Sources</string>
    <string name="none">No Specific News Source</string>
    <string name="bbc">BBC</string>
    <string name="cnn">CNN</string>
    <string name="cbs">CBS</string>
    <string name="reddit">Reddit r/all</string>
    <string name="guardian">The Guardian</string>
    <string name="washington">The Washington Post</string>
    <string name="verge">The Verge</string>
    <string name="open_news">Go to Article</string>
    <string name="newsitem_no_desc">No description available.</string>
    <string name="newsitem_no_author">Unknown Author</string>
    <string name="title_activity_search_word_fragment">SearchWordFragment</string>
    <string name="title_search_word">Enter a word you wish to filter news by</string>
    <string name="title_filter_word">Enter a word you wish to filter news by</string>
    <string name="only_english">Can be applied to English articles only, sorry!</string>
    <string name="nytimes">The New York Times</string>
    <string name="action_settings">Settings</string>
    <string name="country_german">German</string>
    <string name="country_france">France</string>
    <string name="country_russia">Russia</string>
    <string name="country_china">China</string>
    <string name="country_english">US</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_general">General</string>
    <string name="category_health">Health</string>
    <string name="category_business">Business</string>
    <string name="category_science">Science</string>
    <string name="category_sports">Sports</string>
    <string name="category_technology">Technology</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="top_news">Top News</string>
    <string name="top_news_search">Top News\nSearch:</string>
    <string name="top_news_sources">Top News from\n</string>
</resources>
